# tomatolang

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.rst  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  syntax_tree.cpp  syntax_tree.hpp  types.cpp  types.hpp
examples/: equation.tm  fact.tm  fib.tm
interpreter/: bool.cpp  float.cpp  float.hpp  integer.cpp  integer.hpp  interpreter.cpp  interpreter.hpp  object.cpp  object.hpp
interpreter/objects/: integer.cpp  object.hpp
parser/: error.cpp  error.hpp  errors.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  syntax_tree.cpp  syntax_tree.hpp  token.hpp
src/: CMakeLists.txt  lexer.cpp  lexer.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  syntax_tree.cpp  syntax_tree.hpp  tomato.cpp  visitor.cpp  visitor.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp  object.cpp  object.hpp  operations.cpp  operations.hpp
src/interpreter/types/: bool.hpp  object.cpp
src/semantic/: symtab.cpp
src/syntax/: codepoint.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  syntax_tree.cpp  syntax_tree.hpp  token.hpp  tree.cpp  visitor.hpp
tests/: CMakeLists.txt  interpreter_tests.cpp  lexer_tests.cpp  main.cpp  navigator_tests.cpp  parser_tests.cpp  symbols_tests.cpp
tomato/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  syntax_tree.cpp  syntax_tree.hpp  tomato.cpp  visitor.hpp
tomato/interpreter/: interpreter.hpp  operations.cpp  operations.hpp
tomato/semantic/: overloading.cpp  overloading.hpp  symbols.cpp  symbols.hpp  symtab.cpp  symtab.hpp
tomato/syntax/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  visitor.hpp
tomatolang/: CMakeLists.txt  errors.cpp
tomatolang/interpreter/: tomato.cpp
tomatolang/interpreter/types/: bool.cpp  float.cpp  object.hpp
tomatolang/semantic/: symbols.hpp
tomatolang/syntax/: codepoint.hpp  lexer.cpp  lexer.hpp  navigator.cpp  navigator.hpp  parser.hpp  visitor.cpp
tomatotools/: CMakeLists.txt  errors.cpp  errors.hpp
tomatotools/interpreter/: interpreter.cpp  interpreter.hpp  main.cpp  tomato.cpp
tomatotools/interpreter/objects/: bool.cpp  bool.hpp  float.cpp  float.hpp  integer.cpp  integer.hpp  object.cpp  object.hpp  types.hpp
tomatotools/interpreter/types/: integer.cpp  integer.hpp
tomatotools/semantic/: symbols.cpp  symbols.hpp
tomatotools/syntax/: codepoint.cpp  codepoint.hpp  errors.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  syntax_tree.cpp  syntax_tree.hpp  token.cpp  token.hpp  visitor.cpp  visitor.hpp
types/: bool.cpp  bool.hpp  float.cpp  integer.cpp  object.hpp
